--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -1,13 +1,19 @@
 
-@import 'view/settings-fonts';
-@import 'view/settings-structure';
-@import 'view/settings-optimisation'; 
-@import 'view/settings';
-@import 'view/settings-overview';
-@import 'view/settings-advanced';
-@import 'view/settings-cloudflare';
-@import 'view/settings-tools';
-@import 'view/inline-help';
-@import 'view/settings-icons';
+.wrap.is-shortpixel-settings-page
+{
+  @import 'elements/colors';
+	@import 'elements/breakpoints';
+  @import 'view/settings-fonts';
+  @import 'view/settings-structure';
+  @import 'view/settings-optimisation';
+  @import 'view/settings';
+  @import 'view/settings-overview';
+  @import 'view/settings-advanced';
 
-@import 'elements/setting';
+  @import 'view/settings-tools';
+  @import 'view/inline-help';
+  @import 'view/settings-icons';
+
+  @import 'elements/setting';
+
+}
