--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -1,3 +1,15 @@
+@font-face {
+  src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  src: url("../fonts/Roboto-Bold.ttf") format("truetype");
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+}
 .wrap.is-shortpixel-settings-page {
   /* TABS CONTROLS */
   /* article.sp-tabs {
@@ -50,18 +62,6 @@
   } */
   /* In-view notice ( not on top, between the options ) - styled after WP notice */
   /* Specific styles for advanced settings tab */
-}
-@font-face {
-  src: url("../fonts/Roboto-Regular.ttf") format("truetype");
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-}
-@font-face {
-  src: url("../fonts/Roboto-Bold.ttf") format("truetype");
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
 }
 .wrap.is-shortpixel-settings-page.simple .is-advanced {
   display: none;
@@ -868,15 +868,22 @@
   cursor: pointer;
 }
 .wrap.is-shortpixel-settings-page div.spio-modal-shade {
-  position: fixed; /* Stay in place */
-  z-index: 10; /* Sit on top - zindex wars  */
+  position: fixed;
+  /* Stay in place */
+  z-index: 10;
+  /* Sit on top - zindex wars  */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
 .wrap.is-shortpixel-settings-page div.spio-modal {
   background-color: #fefefe;
@@ -886,10 +893,13 @@
   background-position: center;
   padding: 20px 16px 16px;
   border: 1px solid #888;
-  width: 40%; /* Could be more or less, depending on screen size */
+  width: 40%;
+  /* Could be more or less, depending on screen size */
   max-width: 100%;
-  min-width: 300px; /* Could be more or less, depending on screen size */
-  z-index: 100; /* Proper z-index */
+  min-width: 300px;
+  /* Could be more or less, depending on screen size */
+  z-index: 100;
+  /* Proper z-index */
   position: fixed;
   top: 10%;
   left: 30%;
@@ -1057,7 +1067,7 @@
 .wrap.is-shortpixel-settings-page setting switch label {
   font-weight: 700;
 }
-.wrap.is-shortpixel-settings-page setting switch + name, .wrap.is-shortpixel-settings-page setting switch + info {
+.wrap.is-shortpixel-settings-page setting.switch name, .wrap.is-shortpixel-settings-page setting.switch info {
   margin-left: 70px;
 }
 .wrap.is-shortpixel-settings-page settinggrid {
