--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -10,6 +10,67 @@
   font-style: normal;
   font-weight: 700;
 }
+i.documentation {
+  font-size: 1.8em;
+  color: #1caecb;
+  cursor: pointer;
+}
+
+div.spio-modal-shade {
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top - zindex wars  */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+div.spio-modal {
+  background-color: #fefefe;
+  /*margin: 8% auto;  15% from the top and centered */
+  background-image: url("../img/spinner2.gif");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 20px 16px 16px;
+  border: 1px solid #888;
+  width: 40%; /* Could be more or less, depending on screen size */
+  max-width: 100%;
+  min-width: 300px; /* Could be more or less, depending on screen size */
+  z-index: 100; /* Proper z-index */
+  position: fixed;
+  top: 10%;
+  left: 30%;
+  height: 60%;
+  max-height: 90%;
+  overflow-y: auto;
+}
+div.spio-modal iframe {
+  width: 100%;
+  height: 500px;
+}
+div.spio-modal .spio-close-help-button {
+  position: absolute;
+  top: 5px;
+  right: 0;
+  margin-top: 0px;
+  background: transparent;
+  border: none;
+  font-size: 22px;
+  line-height: 10px;
+  cursor: pointer;
+}
+
+div.spio-modal-title {
+  font-size: 22px;
+}
+
+.spio-hide {
+  display: none;
+}
+
 .wrap.is-shortpixel-settings-page {
   /* TABS CONTROLS */
   /* article.sp-tabs {
@@ -204,6 +265,15 @@
 }
 .wrap.is-shortpixel-settings-page .setting-tab .shortpixel-compression-options label input:checked + span {
   background-color: #116C7E;
+}
+.wrap.is-shortpixel-settings-page .setting-tab input[name=resizeWidth], .wrap.is-shortpixel-settings-page .setting-tab input[name=resizeHeight] {
+  width: 100px;
+  background: url("../images/icon/arrows-left-right.svg") 4px center no-repeat #fff;
+  padding-left: 25px;
+  border: 1px solid #1ABDCA;
+}
+.wrap.is-shortpixel-settings-page .setting-tab input[name=resizeHeight] {
+  background-image: url("../images/icon/arrows-up-down.svg");
 }
 .wrap.is-shortpixel-settings-page a {
   color: #0f6a7d;
@@ -588,9 +658,6 @@
   display: inline-block;
   padding: 15px 0 0 0;
 }
-.wrap.is-shortpixel-settings-page #tab-settings input[name=resizeWidth], .wrap.is-shortpixel-settings-page #tab-settings input[name=resizeHeight] {
-  width: 80px;
-}
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper {
   display: flex;
 }
@@ -862,72 +929,6 @@
 .wrap.is-shortpixel-settings-page #tab-tools .danger-zone > p {
   margin-left: 15px;
 }
-.wrap.is-shortpixel-settings-page i.documentation {
-  font-size: 1.8em;
-  color: #1caecb;
-  cursor: pointer;
-}
-.wrap.is-shortpixel-settings-page div.spio-modal-shade {
-  position: fixed;
-  /* Stay in place */
-  z-index: 10;
-  /* Sit on top - zindex wars  */
-  left: 0;
-  top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
-}
-.wrap.is-shortpixel-settings-page div.spio-modal {
-  background-color: #fefefe;
-  /*margin: 8% auto;  15% from the top and centered */
-  background-image: url("../img/spinner2.gif");
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 20px 16px 16px;
-  border: 1px solid #888;
-  width: 40%;
-  /* Could be more or less, depending on screen size */
-  max-width: 100%;
-  min-width: 300px;
-  /* Could be more or less, depending on screen size */
-  z-index: 100;
-  /* Proper z-index */
-  position: fixed;
-  top: 10%;
-  left: 30%;
-  height: 60%;
-  max-height: 90%;
-  overflow-y: auto;
-}
-.wrap.is-shortpixel-settings-page div.spio-modal iframe {
-  width: 100%;
-  height: 500px;
-}
-.wrap.is-shortpixel-settings-page div.spio-modal .spio-close-help-button {
-  position: absolute;
-  top: 5px;
-  right: 0;
-  margin-top: 0px;
-  background: transparent;
-  border: none;
-  font-size: 22px;
-  line-height: 10px;
-  cursor: pointer;
-}
-.wrap.is-shortpixel-settings-page div.spio-modal-title {
-  font-size: 22px;
-}
-.wrap.is-shortpixel-settings-page .spio-hide {
-  display: none;
-}
 .wrap.is-shortpixel-settings-page .shortpixel-icon {
   width: 25px;
   height: 25px;
@@ -995,6 +996,12 @@
 .wrap.is-shortpixel-settings-page .shortpixel-icon.switch {
   background-image: url("../images/icon/switch.svg");
 }
+.wrap.is-shortpixel-settings-page .shortpixel-icon.arrows-left-right {
+  background-image: url("../images/icon/arrows-left-right.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.arrows-up-down {
+  background-image: url("../images/icon/arrows-up-down.svg");
+}
 .wrap.is-shortpixel-settings-page .shortpixel-illustration {
   display: inline-block;
   background-repeat: no-repeat;
@@ -1044,11 +1051,13 @@
   border-left: 4px solid #ffb900;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
   padding: 8px;
-  margin: 4px 0 12px 230px;
+  margin: 4px 0 12px 0px;
   flex-basis: 100%;
   display: none;
   opacity: 0;
   transition: opacity 300ms;
+  background: #fff;
+  max-width: 700px;
 }
 .wrap.is-shortpixel-settings-page setting warning h4, .wrap.is-shortpixel-settings-page setting error h4 {
   margin: 0;
@@ -1059,7 +1068,7 @@
   font-size: 13px;
 }
 .wrap.is-shortpixel-settings-page setting warning.is-visible, .wrap.is-shortpixel-settings-page setting error.is-visible {
-  display: inline-block;
+  display: block;
 }
 .wrap.is-shortpixel-settings-page setting error {
   border-left-color: #ff0000;
@@ -1067,7 +1076,7 @@
 .wrap.is-shortpixel-settings-page setting switch label {
   font-weight: 700;
 }
-.wrap.is-shortpixel-settings-page setting.switch name, .wrap.is-shortpixel-settings-page setting.switch info {
+.wrap.is-shortpixel-settings-page setting.switch name, .wrap.is-shortpixel-settings-page setting.switch info, .wrap.is-shortpixel-settings-page setting.switch warning, .wrap.is-shortpixel-settings-page setting.switch error {
   margin-left: 70px;
 }
 .wrap.is-shortpixel-settings-page settinggrid {
