--- a/res/scss/view/_settings-optimisation.scss
+++ b/res/scss/view/_settings-optimisation.scss
@@ -94,4 +94,43 @@
 		}
 
 
+		.presentation-wrap {
+				padding: 10px;
+				text-align: center;
+				display: flex;
+				justify-content: center;
+				width: 600px;
+				img {
+						margin: auto;
+				}
+				@include breakpoint(0, 1280px)
+				{
+						width: 460px;
+				}
+				@include breakpoint(0, 1140px)
+				{
+							width: 320px;
+				}
+		}
+		.spai-resize-frame {
+				position: absolute;
+				border: 2px dashed #fd1d1d;
+				&:after {
+						font-size: 10px;
+						font-weight: bold;
+						position: absolute;
+						bottom: -15px;
+						right: 0;
+						color: red;
+				}
+		}
+		.resize-options-wrap {
+				margin: 10px 20px 0 20px;
+				float: left;
+		}
+		.resize-type-wrap label {
+				display: inline-block;
+				padding: 15px 0 0 0;
+		}
+
 } //setting-tab
