--- a/res/scss/view/_settings-icons.scss
+++ b/res/scss/view/_settings-icons.scss
@@ -7,7 +7,7 @@ $disabled:  'disabled.svg';
 $selected: 'selected.svg';
 
 
-$icons: cdn, dashboard, debug, delivery, feedback, help, optimization, processing, notifications, tools, webp_avif, photo, box-archive, bulk, ok, arrow-right, key, save, switch, arrows-left-right, arrows-up-down;
+$icons: cdn, dashboard, debug, delivery, feedback, help, optimization, processing, notifications, tools, webp_avif, photo, box-archive, bulk, ok, warning, alert, arrow-right, key, save, switch, arrows-left-right, arrows-up-down;
 
 .shortpixel-icon
 {
