--- a/res/scss/elements/_colors.scss
+++ b/res/scss/elements/_colors.scss
@@ -14,3 +14,6 @@ $black_default: #001E24;
 
 // https://angel-rs.github.io/css-color-filter-generator/
 $filter_black: brightness(0) saturate(100%);
+$filter_orange: brightness(0) saturate(100%) invert(72%) sepia(57%) saturate(456%) hue-rotate(353deg) brightness(105%) contrast(95%);
+$filter_red:  brightness(0) saturate(100%) invert(20%) sepia(95%) saturate(6009%) hue-rotate(360deg) brightness(99%) contrast(125%);
+$filter_green: brightness(0) saturate(100%) invert(58%) sepia(24%) saturate(4079%) hue-rotate(125deg) brightness(97%) contrast(101%);
