--- a/res/scss/view/_settings-overview.scss
+++ b/res/scss/view/_settings-overview.scss
@@ -42,10 +42,12 @@
        &.middle-row
        {
           margin: 20px 0;
-          height: 200px;
-          > div {
+        //  height: 200px;
+
+          > .panel {
             width: 33.333%;
             //margin-right: 3%;
+            padding: 8px 0;
             flex-direction: column;
             border-right: 1px solid #92D5E3;
 
@@ -55,19 +57,36 @@
             }
             > i:first-child {
               width: 50px;
-              height: 50px;
+              height: 40px;
+              filter: $filter_green;
+              &.switch { width: 60px; }
             }
             span
             {
               line-height: 14px;
+              margin: 16px 0 24px;
               i {
                float: left;
                width: 12px;
                height: 12px;
                margin-right: 4px;
-             }
-           }
 
+             }
+            }
+
+            &.warning {
+               i {
+                  filter: $filter_orange;
+               }
+            }
+            &.alert {
+              i {
+                 filter: $filter_red;
+              }
+            }
+            .status-line {
+              margin-left : 4px;
+            }
             button {
                height: 40px;
                padding: 10px 12px;
@@ -79,7 +98,7 @@
                   margin-right: 4px;
                }
             }
-          }
+          } // PANEL
        }
        div {
          background: #F4FBFC;
@@ -108,7 +127,7 @@
            input {
               border: 1px solid #1ABDCA;
               background: url('../images/icon/key.svg') no-repeat 1% center #fff;
-              padding-left: 26px;
+              padding-left: 30px;
               height: 36px;
            }
            button {
