Wip / dashboard / settings/ bulk

--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -1,15 +1,18 @@
 
 
 // Font family not working in wraps
-@import 'view/settings-fonts';
+@import 'elements/fonts';
 
 // This one loads at end of body, so needs global as well
 @import 'view/inline-help';
 
 .wrap.is-shortpixel-settings-page
 {
+
   @import 'elements/colors';
 	@import 'elements/breakpoints';
+  @import 'elements/header';
+  @import 'elements/icons';
   @import 'view/settings-structure';
   @import 'view/settings-optimisation';
   @import 'view/settings';
@@ -17,7 +20,7 @@
   @import 'view/settings-advanced';
 
   @import 'view/settings-tools';
-  @import 'view/settings-icons';
+
 
   @import 'elements/setting';
 
