--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -811,6 +811,10 @@
         .heading {
            background: #F6F9FF;
            border: 1px solid #EBF5FF;
+					 .special-op
+					 {
+						  color: #EC2C25;
+					 }
         }
 
         .line-progressbar
